fixed spacing of gallery div; adjusted gallery title font size

--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -13,7 +13,7 @@
 }
 
 .galleryCategory p {
-    font-size: 2.5rem;
+    font-size: 1.5em;
     font-family: 'PT Serif';
 }
 
@@ -24,8 +24,8 @@
 }
 
 img {
-    max-height: 100%;
-    min-width: 100%;
+    max-height: 95%;
+    min-width: 95%;
     object-fit: cover;
     vertical-align: bottom;
 }
@@ -39,7 +39,7 @@ img:hover {
 .galleryWall {
     display: flex;
     flex-wrap: wrap;
-    padding: 40px 20px 40px 20px;
+    padding: 40px 20px 20px 20px;
     background-color: #fce6e7;
 }
 
@@ -48,11 +48,11 @@ img:hover {
     flex-grow: 1;
 }
 
-@media only screen and (max-width: 700px) {
+/* @media only screen and (max-width: 700px) {
     .galleryWall {
         margin-top: -30vh;
     }
-}
+} */
 
 @media (max-aspect-ratio: 1/1) {
     .imageCard {
